--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -23,8 +23,4 @@ jobs:
         AWS_REGION: us-east-1
         AWS_ENDPOINT: http://localhost:4576
       run: | 
-          dotnet build -c Release
-          docker-compose -f .docker/test-enviroment.yml up -d
-          echo "sleep 20"
-          sleep 20
-          dotnet test "--logger:junit;LogFilePath=./test-reports/results.xml" /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput="coverage.xml" /p:Thereshold=80
+          dotnet test "--logger:junit;LogFilePath=./test-reports/results.xml" /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput="coverage.xml"  /p:ThresholdType=line /p:Thereshold=49
