--- a/Herald.MessageQueue.HealthCheck.Tests/Herald.MessageQueue.HealthCheck.Tests.csproj
+++ b/Herald.MessageQueue.HealthCheck.Tests/Herald.MessageQueue.HealthCheck.Tests.csproj
@@ -1,7 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
@@ -24,6 +25,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Herald.MessageQueue.HealthCheck.Kafka\Herald.MessageQueue.HealthCheck.Kafka.csproj" />
+    <ProjectReference Include="..\Herald.MessageQueue.HealthCheck.RabbitMq\Herald.MessageQueue.HealthCheck.RabbitMq.csproj" />
+    <ProjectReference Include="..\Herald.MessageQueue.HealthCheck.Sqs\Herald.MessageQueue.HealthCheck.Sqs.csproj" />
   </ItemGroup>
 
 </Project>
