feat: azure storage queue

--- a/Herald.MessageQueue.HealthCheck.RabbitMq/Herald.MessageQueue.HealthCheck.RabbitMq.csproj
+++ b/Herald.MessageQueue.HealthCheck.RabbitMq/Herald.MessageQueue.HealthCheck.RabbitMq.csproj
@@ -5,11 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Herald.MessageQueue.RabbitMq" Version="1.1.3" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.0.0" />
+    <PackageReference Include="Herald.MessageQueue.RabbitMQ" Version="3.0.1" />
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="3.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.Abstractions" Version="3.0.0" />
-    <PackageReference Include="RabbitMQ.Client" Version="5.1.2" />
   </ItemGroup>
 
 </Project>
