--- a/Herald.MessageQueue.HealthCheck.AzureStorageQueue/Herald.MessageQueue.HealthCheck.AzureStorageQueue.csproj
+++ b/Herald.MessageQueue.HealthCheck.AzureStorageQueue/Herald.MessageQueue.HealthCheck.AzureStorageQueue.csproj
@@ -1,12 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Herald.MessageQueue.Sqs" Version="3.0.1" />
+    <PackageReference Include="Herald.MessageQueue.AzureStorageQueue" Version="3.0.1" />
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="3.0.0" />
   </ItemGroup>
-
+  
 </Project>
