--- a/Herald.MessageQueue.HealthCheck.RabbitMq/Herald.MessageQueue.HealthCheck.RabbitMq.csproj
+++ b/Herald.MessageQueue.HealthCheck.RabbitMq/Herald.MessageQueue.HealthCheck.RabbitMq.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="3.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Herald.MessageQueue.HealthCheck\Herald.MessageQueue.HealthCheck.csproj" />
+  </ItemGroup>
+
 </Project>
