--- a/Herald.MessageQueue.HealthCheck.AzureStorageQueue/Herald.MessageQueue.HealthCheck.AzureStorageQueue.csproj
+++ b/Herald.MessageQueue.HealthCheck.AzureStorageQueue/Herald.MessageQueue.HealthCheck.AzureStorageQueue.csproj
@@ -1,12 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+	  <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Herald.MessageQueue.AzureStorageQueue" Version="7.0.3" />
-    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="3.0.0" />
+    <PackageReference Include="Herald.MessageQueue.AzureStorageQueue" Version="11.0.0" />
   </ItemGroup>
 
   <ItemGroup>
